--- a/curvature_perturbations.tex
+++ b/curvature_perturbations.tex
@@ -16,15 +16,21 @@ With our convention for the metric perturbations in Newtonian gauge\todotag{TBC}
 \end{align}
 %
 We can thus plug this into \eqref{eq:rho_p_fluctuations_via_b_y} to explicitly express $\delta\rho$ and $\delta p$, we get
+\begin{align}
+\begin{aligned}
+    \delta\rho &= (y^2F_{yy})\left(\tfrac12 h^{00}+ \dot{\pi}^0\right) + (-bF_b+byF_{by})\left(-\tfrac12 h^{ii} +(\partial_j \pi^j)\right) + O(2)\\
+    &= (y^2F_{yy})\left(-\Phi+ \dot{\pi}^0\right) + (-bF_b+byF_{by})\left(3\Psi +(\partial_j \pi^j)\right) + O(2)
+    \\[3pt]
+    \delta p &= (yF_y-byF_{by})\left(\tfrac12 h^{00}+ \dot{\pi}^0\right) - (b^2 F_{bb})\left(-\tfrac12 h^{ii} +(\partial_j \pi^j)\right)+ O(2)\\
+    &= (yF_y-byF_{by})\left(-\Phi+ \dot{\pi}^0\right) - (b^2 F_{bb})\left(3\Psi +(\partial_j \pi^j)\right)+ O(2)\,.
+\end{aligned}
+\end{align}
+The comoving curvature perturbation on comoving slices $\zeta$ in Newtonian gauge is
 \begin{equation}
-    ...
-\end{equation}
-
-The comoving curvature perturbation on comoving slices $\zeta$ is defined as
-\begin{equation}
-    \zeta = ...
+    \zeta = -\Psi -\mathcal{H}v = -\Psi + \mathcal{H}\frac{\delta q}{\bar{\rho}+\bar{p}} = -\Psi + \mathcal{H}\frac{-\bar{y}F_{yy}\pi_L}{\bar{y}F_y} = -\Psi - \mathcal{H}\frac{F_{yy}}{F_y}\pi_L\,,
 \end{equation}
 We can thus express $\zeta$ in terms of the fields $\pi_L$ and the metric perturbations...
 \begin{equation}
     ...
 \end{equation}
+
