--- a/main.tex
+++ b/main.tex
@@ -851,22 +851,20 @@ and
 \begin{align}
     \Gamma&=\frac{\partial p}{\partial \sigma}_{|\rho}=C(2-\beta)\beta b^{\beta-1}\frac{\partial b}{\partial \sigma}_{|\rho}=-\frac{C(2-\beta)\beta b^{\beta+1}}{y^2+2C\beta b^{\beta}}\,.
 \end{align}
-
-
-
-
-
-
-
-
-
-
+{\color{red}
+Now proceeding as in the previous solution, we do
+\begin{itemize}
+    \item now invert $y$ and $b$ in terms of $X$ and $V$ as above.
+    \item next express the entropy and its variation in terms of $X$ and $V$.
+    \item next express the non-adiabatic $\Gamma$ and pressure perturbations $\delta P_{\text{nad}}$ in terms of $X$ and $V$.
+\end{itemize}
+}
 
 
 
 
 \subsubsection{Alternative solution 2}
-Alternatively we can look for a solution $F=Cy^\alpha b^\beta$, then
+Alternatively we can look for a solution $F=Cy^\alpha b^\beta$, then\todotag{Not sure it is worth it}
 \begin{align}
     X=yF_y+bF_b=(\alpha+\beta)F,\quad V=-F+\tfrac12 (yF_y-bF_b)=\big(-1+\tfrac12(\alpha+\beta)\big)F.
 \end{align}
