--- a/curvature_perturbations.tex
+++ b/curvature_perturbations.tex
@@ -25,12 +25,21 @@ We can thus plug this into \eqref{eq:rho_p_fluctuations_via_b_y} to explicitly e
     &= (yF_y-byF_{by})\left(-\Phi+ \dot{\pi}^0\right) - (b^2 F_{bb})\left(3\Psi +(\partial_j \pi^j)\right)+ O(2)\,.
 \end{aligned}
 \end{align}
-The comoving curvature perturbation on comoving slices $\zeta$ in Newtonian gauge is
+Introducing the phonon potential $\partial_\ell\pi_L=\pi^\ell$ we have $\partial_j \pi^j = \nabla^2 \pi_L$ and $[\pi_L]=E^{-2}$.
+We also recall the velocity expansion
+\begin{align}
+\begin{aligned}
+    &au^\mu=\delta_0^\mu \bigg(1 \!+\! \Big[\tfrac12 h^{00} -(\partial_j \pi^j)\Big]\!\bigg) +\tfrac{1}{2}\epsilon_{i j k}\,\epsilon^{\mu \alpha j k}\,\partial_\alpha\pi^i +O(2)\,.
+\end{aligned}
+\end{align}
+We then identify the peculiar velocity and the velocity potential (for phonons/scalar perturbations) as
+\begin{align}
+    av^\ell = \frac{1}{2}\epsilon_{i j k}\,\epsilon^{\ell \alpha j k}\,\partial_\alpha\pi^i = -\dot{\pi}^\ell\quad \Rightarrow \quad av = -\dot{\pi}_L\quad \text{where}\quad \partial_\ell\pi_L=\pi^\ell
+\end{align}
+The comoving curvature perturbation on comoving slices $\zeta$ in Newtonian gauge is then identified in terms of phonon field and metric perturbations as
 \begin{equation}
-    \zeta = -\Psi -\mathcal{H}v = -\Psi + \mathcal{H}\frac{\delta q}{\bar{\rho}+\bar{p}} = -\Psi + \mathcal{H}\frac{-\bar{y}F_{yy}\pi_L}{\bar{y}F_y} = -\Psi - \mathcal{H}\frac{F_{yy}}{F_y}\pi_L\,,
+    \zeta = -\Psi -\mathcal{H}v = -\Psi + \mathcal{H}\frac{\dot{\pi}_L}{a}\,.
 \end{equation}
-We can thus express $\zeta$ in terms of the fields $\pi_L$ and the metric perturbations...
-\begin{equation}
-    ...
-\end{equation}
+
+
 
