--- a/quadratic_action_curved_spacetime.tex
+++ b/quadratic_action_curved_spacetime.tex
@@ -59,6 +59,11 @@ In turn we can express the fluctuations in density $\rho=-F+yF_y$ and pressure $
 \end{aligned}
 \end{align}
 
+We also introduce the phonon potential $\partial_\ell\pi_L=\pi^\ell$, so that $\partial_j \pi^j = \nabla^2 \pi_L$ and $[\pi_L]=E^{-2}$.
+From the velocity expansion $au^\mu =a(1+\dots, v^\ell)$ above we identify the peculiar velocity and the velocity potential (for phonons/scalar perturbations) as
+\begin{align}
+    av^\ell = \frac{1}{2}\epsilon_{i j k}\,\epsilon^{\ell \alpha j k}\,\partial_\alpha\pi^i = -\dot{\pi}^\ell\quad \Rightarrow \quad av = -\dot{\pi}_L\quad \text{where}\quad \partial_\ell\pi_L=\pi^\ell
+\end{align}
 
 We can now expand the action up to second order 
 {\small
