finish expandion lagrangian

--- a/curvature_perturbations.tex
+++ b/curvature_perturbations.tex
@@ -32,14 +32,15 @@ We also recall the velocity expansion
     &au^\mu=\delta_0^\mu \bigg(1 \!+\! \Big[\tfrac12 h^{00} -(\partial_j \pi^j)\Big]\!\bigg) +\tfrac{1}{2}\epsilon_{i j k}\,\epsilon^{\mu \alpha j k}\,\partial_\alpha\pi^i +O(2)\,.
 \end{aligned}
 \end{align}
-We then identify the peculiar velocity and the velocity potential (for phonons/scalar perturbations) as
+We then identify the peculiar velocity $au^\mu =a(1+\dots, v^\ell)$ and the velocity potential (for phonons/scalar perturbations) as
 \begin{align}
-    av^\ell = \frac{1}{2}\epsilon_{i j k}\,\epsilon^{\ell \alpha j k}\,\partial_\alpha\pi^i = -\dot{\pi}^\ell\quad \Rightarrow \quad av = -\dot{\pi}_L\quad \text{where}\quad \partial_\ell\pi_L=\pi^\ell
+    v^\ell = \frac{1}{2}\epsilon_{i j k}\,\epsilon^{\ell \alpha j k}\,\partial_\alpha\pi^i = -\dot{\pi}^\ell\quad \Rightarrow \quad v = -\dot{\pi}_L\quad \text{where}\quad \partial_\ell\pi_L=\pi^\ell
 \end{align}
-The comoving curvature perturbation on comoving slices $\zeta$ in Newtonian gauge is then identified in terms of phonon field and metric perturbations as
+The comoving curvature perturbation on comoving slices $\zeta$ in Newtonian gauge is then identified in terms of phonons and metric perturbations as
 \begin{equation}
-    \zeta = -\Psi -\mathcal{H}v = -\Psi + \mathcal{H}\frac{\dot{\pi}_L}{a}\,.
+    \zeta = -\Psi -\mathcal{H}v = -\Psi + \mathcal{H}\,\dot{\pi}_L\,.
 \end{equation}
+
 
 
 
