--- a/curvature_perturbations.tex
+++ b/curvature_perturbations.tex
@@ -40,6 +40,7 @@ The comoving curvature perturbation on comoving slices $\zeta$ in Newtonian gaug
 \begin{equation}
     \zeta = -\Psi -\mathcal{H}v = -\Psi + \mathcal{H}\,\dot{\pi}_L\,.
 \end{equation}
+We may now replace this into the EoM for phonons to get the behavior on superhorizon scales...
 
 
 
